[project]
name = "sampleproject"
version = "0.1.0"
description = ""
authors = [
    {name = "AffaanJaweed"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "setuptools (>=80.10.1,<81.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
