[project]
name = "sampleproject"
version = "0.1.0"
description = ""
authors = [
    {name = "AffaanJaweed"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "setuptools (>=80.10.1,<81.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "xgboost (>=3.1.3,<4.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "dill (>=0.4.1,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
